# s3modelcache

./: .env  .gitignore  Dockerfile  Dockerfile.init  LICENSE  README.md  cache_model.py  check_403_causes.py  debug_403.py  extract_ca.py  images-clenaup.sh  pyproject.toml  quick_s3_test.py  requirements.dev.txt  requirements.txt  test_s3_connection.py
app/: cache_model.py
app/s3modelcache/: logger.py  model_cache.py  upload_large.py
k8s/: busybox.yaml  deployment-aws-client-modelcache.yaml  deployment-busybox-modelcache.yaml  deployment-s3cache-proxy.yaml  deployment-s3cache.yaml  deployment-with-aws-client.yaml  deployment-with-modelcache-init.yaml  hf-token-secret.yaml  proxy-ca-secret.yaml  proxy-configmap.yaml  pvc-model-cache.yaml  s3-credentials-secret.yaml  vllm-configmap.yaml
scripts/: run-s3cache.sh
src/s3modelcache/: __init__.py  model_cache.py
src/s3modelcache/examples/: basic_usage.py
tests/: test_s3_model_cache.py
