[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "s3modelcache"
version = "0.1.0"
description = "HuggingFace ↔️ S3 model caching helper"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34,<2.0",
    "botocore>=1.34,<2.0",
    "huggingface_hub>=0.23,<1.0",
    "transformers>=4.41,<5.0",
    "torch>=2.3,<3.0",
    "vllm>=0.4.0,<1.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-cov>=5,<6",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["s3modelcache"]
